--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,3 @@
-databases:
-  - name: restaurant_reservation_system
-    plan: free
-    databaseName: rrs
-    user: rrs_user
-
 services:
   - type: web
     name: restaurant_reservation_system
@@ -13,8 +7,6 @@ services:
     startCommand: "./bin/render-start.sh"
     envVars:
       - key: DATABASE_URL
-        fromDatabase:
-          name: restaurant_reservation_system
-          property: connectionString
+        sync: false
       - key: RAILS_MASTER_KEY
         sync: false
